
[v1.1.2p17b]
- Bugfix: changed how CDockables behave when setting or reading their location. A CDockable that is a "hidden root station" (a DockStation that is registered as root but without parent DockStation) is treated as it was invisible. As a result, calling "setLocation" will store the location instead of directly trying to apply it (which would fail because a root item cannot be moved)

[v1.1.2p18]
- API: New method AbstractCDockable.toFront allows clients to focus a Dockable, and a child Component of that Dockable with only one method call

[v1.1.2p18a]
- Bugfix: Tabs of the Flat-theme did not respect the foreground color that was set by the client.

[v1.1.2p19]
- Bugfix: An exception was thrown when a CDockable was externalized, the eclipse-theme was selected, and someone was calling CControl.destroy
- API: added "setAcceleratorIsGlobal" to CDecoratableAction, allowing actions to monitor all key events of the application.

[v1.1.2p19a]
- Bugfix: when adding an action to an existing dropdown-menu, then the action was always added at the end of the menu
- Bugfix (provided by Nicolas Roduit): properly read java version specification number of Java 9 (see "DockUI.registerColors")
- Feature (provided by Nicolas Roduit): new and better translations for various languages

[v1.1.2p19b]
- Bugfix: memory leak fixed, that was caused by a listener created by the "AbstractTabLayoutManagerPane". The listener was never removed properly. Thanks mattbru2 for finding the bug!

[v1.1.2p19c]
- Bugfix: disabled icon of DockActions was converted to gray twice, making them hard to read and also overriding the (not gray) icon that might be set by the client. Thanks Thomas for finding this bug.
- Bugfix: disabled icon of DockActions was not painted in drop-down-menus

[v1.1.2p19d]
! Bugfix: CControlPerspectiveBlop writeXML/write was not symmetrical with readXML/read