@@ -1126,3 +1126,5 @@
 
 [v1.1.2p19d]
 ! Bugfix: CControlPerspectiveBlop writeXML/write was not symmetrical with readXML/read
+- Bugfix: An ApplicationResourceManager that read some unknown resources from a file may write them back in any file that is created
+ 
